test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_nested.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_nested"
---
//// erlang_nested/_gleam_artefacts/one@two.abstr
<556 byte binary>

//// erlang_nested/_gleam_artefacts/one@two.cache
<.cache binary>

//// erlang_nested/_gleam_artefacts/one@two.cache_meta
<31 byte binary>

//// erlang_nested/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two]},
    {registered, []}
]}.
