test-package-compiler/src/snapshots/test_package_compiler__tests__erlang_nested_qualified_constant.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/erlang_nested_qualified_constant"
---
//// erlang_nested_qualified_constant/_gleam_artefacts/one@two.abstr
<349 byte binary>

//// erlang_nested_qualified_constant/_gleam_artefacts/one@two.cache
<.cache binary>

//// erlang_nested_qualified_constant/_gleam_artefacts/one@two.cache_meta
<31 byte binary>

//// erlang_nested_qualified_constant/_gleam_artefacts/two.abstr
<285 byte binary>

//// erlang_nested_qualified_constant/_gleam_artefacts/two.cache
<.cache binary>

//// erlang_nested_qualified_constant/_gleam_artefacts/two.cache_meta
<62 byte binary>

//// erlang_nested_qualified_constant/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two,
               two]},
    {registered, []}
]}.
