test-package-compiler/src/snapshots/test_package_compiler__tests__imported_constants.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/imported_constants"
---
//// imported_constants/_gleam_artefacts/one.abstr
<593 byte binary>

//// imported_constants/_gleam_artefacts/one.cache
<.cache binary>

//// imported_constants/_gleam_artefacts/one.cache_meta
<39 byte binary>

//// imported_constants/_gleam_artefacts/two.abstr
<4136 byte binary>

//// imported_constants/_gleam_artefacts/two.cache
<.cache binary>

//// imported_constants/_gleam_artefacts/two.cache_meta
<170 byte binary>

//// imported_constants/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// imported_constants/ebin/one.beam
<0 byte binary>

//// imported_constants/ebin/two.beam
<0 byte binary>

//// imported_constants/include/one_User.hrl
-record(user, {
    name :: binary(),
    score :: integer()
}).
