test-package-compiler/src/snapshots/test_package_compiler__tests__imported_external_fns.snap
---
source: test-package-compiler/src/tests.rs
expression: "./cases/imported_external_fns"
---
//// imported_external_fns/_gleam_artefacts/one.abstr
<770 byte binary>

//// imported_external_fns/_gleam_artefacts/one.cache
<.cache binary>

//// imported_external_fns/_gleam_artefacts/one.cache_meta
<44 byte binary>

//// imported_external_fns/_gleam_artefacts/three.abstr
<776 byte binary>

//// imported_external_fns/_gleam_artefacts/three.cache
<.cache binary>

//// imported_external_fns/_gleam_artefacts/three.cache_meta
<44 byte binary>

//// imported_external_fns/_gleam_artefacts/two.abstr
<5857 byte binary>

//// imported_external_fns/_gleam_artefacts/two.cache
<.cache binary>

//// imported_external_fns/_gleam_artefacts/two.cache_meta
<246 byte binary>

//// imported_external_fns/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               three,
               two]},
    {registered, []}
]}.
